# ProgWeb

./: .gitignore  JavaScript_Web_Presentacion.key  README.md
.github/workflows/: pages.yml
Tutoriales/: NOIP.html  NOIP.md  auth.md  deploy.md  django-admin.md  django-orm.md  django.md  forms.md  htmx.md  http-query.md  linux.md  postgresql.md  s3.md  ssh-keys.md  url-mapping.md
Tutoriales/css/: basic.html  readme.md  tail.html
Tutoriales/css/css/: style.css
Tutoriales/javascript/: animate.md  hola.html  hola.js  holabye.html  infinite-remove.md  infinite.md
Tutoriales/javascript/SPA/: singlepage.html
Tutoriales/javascript/cat/: cat-infinite.html  cat-infinite.js
Tutoriales/javascript/dog/: dog.html  dog.js
doc-src/: pyproject.toml
doc-src/source/: conf.py
docs-src/: pyproject.toml
docs-src/progweb_docs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs-src/source/: conf.py  index.rst
docs-src/source/cheatsheets/: index.rst  linux.rst  postgresql.rst  ssh-keys.rst
docs-src/source/curso/: herramientas.rst  proyectos.rst  sobre.rst
docs-src/source/tutoriales/: asyncio.rst  django_env.rst  django_orm.rst  django_setup.rst  nix.rst  postgresql.rst
docs-src/source/unidades/: cloud.rst  django.rst  html_css.rst  javascript.rst
docs-src/source/unidades/cloud/: docker.md  lectura.rst  redis.md  redis.rst
docs-src/source/unidades/django/: lectura.rst
docs-src/source/unidades/html_css/: lectura.rst
docs-src/source/unidades/introduccion/: lectura.rst  notas.rst  telnet_http.rst
