[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "progweb-docs"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "sphinx>=7.2",
  "furo>=2024.1.29",
  "myst-parser>=3.0.0",
  "sphinxcontrib-bibtex",
  "sphinx-book-theme>=1.1.4",
  "sphinx-copybutton",
]

